# tig-monorepo

./: .gitignore  Cargo.toml  date.md  switch.sh
rust_wrapper/rust_lib/: Cargo.toml
rust_wrapper/rust_lib/src/: lib.rs
rust_wrapper/rust_lib/test/: main.cpp
scripts/: live_bench-par.sh  live_bench.sh  test_algorithm_multi.sh
tig-algorithms/: Cargo.toml  build.rs
tig-algorithms/native/: CMakeLists.txt  entry.cpp
tig-algorithms/native/clarke-native/: CMakeLists.txt  clarke_wright_v1.cpp
tig-algorithms/native/knapsack-native/: CMakeLists.txt  dp_cuda.h  knapmaxxing-v1.cu  knapmaxxing-v2.cu  knapmaxxing.cpp  utils.h
tig-algorithms/native/sat-native/: CMakeLists.txt
tig-algorithms/native/vector-native/: CMakeLists.txt  bacalhau_v1.cpp  optimax_native.cpp
tig-algorithms/src/knapsack/: mod.rs
tig-algorithms/src/knapsack/knap_super_bb/: benchmarker_outbound.rs
tig-algorithms/src/knapsack/knapmaxxing/: ffi.rs  innovator_outbound.rs  mod.rs
tig-algorithms/src/satisfiability/: mod.rs
tig-algorithms/src/satisfiability/fast_walk_sat/: benchmarker_outbound.rs
tig-algorithms/src/satisfiability/sat_allocd/: benchmarker_outbound.rs  mod.rs
tig-algorithms/src/satisfiability/sprint_sat/: innovator_outbound.rs
tig-algorithms/src/vector_search/: mod.rs
tig-algorithms/src/vector_search/brute_force_bacalhau/: benchmarker_outbound.rs
tig-algorithms/src/vector_search/kd_fastdim/: inbound.rs  inbound_fuel.rs
tig-algorithms/src/vector_search/optifuel_search/: inbound_fuel.rs  mod.rs
tig-algorithms/src/vector_search/optimax_gpu/: benchmarker_outbound.rs  inbound.rs  inbound_saved.rs  mod.rs  optimax_native.rs  optimax_search.rs
tig-algorithms/src/vector_search/optimax_search/: inbound.rs  mod.rs
tig-algorithms/src/vehicle_routing/: mod.rs
tig-algorithms/src/vehicle_routing/clarke_wright/: innovator_outbound.rs  mod.rs
tig-algorithms/src/vehicle_routing/clarke_wright_super/: benchmarker_outbound.rs
tig-algorithms/src/vehicle_routing/clarke_wright_ultimate/: benchmarker_outbound.rs  benchmarker_outbound_cleaned.rs
tig-algorithms/src/vehicle_routing/cw_heuristic/: benchmarker_outbound.rs
tig-algorithms/src/vehicle_routing/cw_super_too/: benchmarker_outbound.rs
tig-algorithms/src/vehicle_routing/cw_ultimate/: benchmarker_multi_heusistic.rs  benchmarker_outbound.rs
tig-algorithms/src/vehicle_routing/super_darwin/: benchmarker_outbound.rs
tig-algorithms/wasm/knapsack/: knap_super_bb.wasm  quick_knap.wasm
tig-algorithms/wasm/vector_search/: optimax_gpu.wasm
tig-algorithms/wasm/vehicle_routing/: clarke_wright.wasm  clarke_wright_super.wasm  cw_heuristic.wasm  cw_super_too.wasm  cw_ultimate.wasm
tig-benchmarker/: Cargo.toml  build.rs  main.py
tig-benchmarker/master/: config.py  job_manager.py
tig-benchmarker/src/: main.rs
tig-benchmarker/src/benchmarker/: algo_selection.rs  cuda_run_benchmark.rs  download_wasm.rs  mod.rs  native_run_benchmark.rs  run_benchmark.rs  submit_benchmark.rs  submit_proof.rs
tig-challenges/: Cargo.toml
tig-challenges/src/: lib.rs  vector_search.rs
tig-native/: Cargo.toml  build.rs
tig-native/native/: CMakeLists.txt
tig-native/native/challenges/: CMakeLists.txt  Random.h  RngArray.cpp  RngArray.h  knapsack.cpp  knapsack.h  vector_search.cpp  vector_search.h
tig-native/native/clarke-native/: CMakeLists.txt
tig-native/native/knapsack-native/: CMakeLists.txt  dp_cuda.cu  dynamic.cu  entrypoint.cu  utils.cpp
tig-native/native/sat-native/: CMakeLists.txt  sprint_sat.cpp  sprint_sat_v2.cpp  structure.h
tig-native/native/vector-native/: CMakeLists.txt  optimax_native.cpp
tig-native/src/: lib.rs  vector_search.rs  vehicle_routing.rs
tig-worker/: Cargo.toml
tig-worker/src/: lib.rs  native_worker.rs  worker.rs
