[package]
name = "tig-algorithms"
version = "0.1.0"
readme = "README.md"
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.81"
cudarc = { version = "0.12.0", features = [
    "cuda-version-from-build-system",
], optional = true }
ndarray = "0.15.6"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
tig-challenges = { path = "../tig-challenges" }
tig-native = { path = "../tig-native" , optional = true  }
rust_lib = { path = "../rust_wrapper/rust_lib" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5"
num_cpus = "1.13"
libc = "0.2"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = ["tig-native"]
cuda = ["cudarc", "tig-challenges/cuda"]
native = ["tig-native"]
