[package]
name = "tig-challenges"
version = "0.1.0"
readme = "README.md"
license = "https://github.com/tig-foundation/tig-monorepo/tree/main/docs/agreements/end_user_license_agreement.pdf"
authors.workspace = true
repository.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
anyhow = "1.0.81"
cudarc = { version = "0.12.0", features = [
    "cuda-version-from-build-system",
], optional = true }
tig-native = { path = "../tig-native" , optional = true }
ndarray = "0.15.6"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
libc = "0.2"


[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = ["tig-native"]
cuda = ["cudarc"]
native = ["tig-native"]
