[package]
name = "tig-worker"
version = "0.1.0"
readme = "README.md"
license = "https://github.com/tig-foundation/tig-monorepo/tree/main/docs/agreements/end_user_license_agreement.pdf"
authors.workspace = true
repository.workspace = true
edition.workspace = true
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.81"
bincode = "1.3.3"
clap = { version = "4.5.4" }
serde = { version = "1.0.196", features = ["derive"] }
tig-native = { path = "../tig-native" , optional = true  }
tig-algorithms = { path = "../tig-algorithms" }
tig-challenges = { path = "../tig-challenges" }
tig-structs = { path = "../tig-structs" }
tig-utils = { path = "../tig-utils" }

wasmi = { git = "https://github.com/tig-foundation/wasmi.git", branch = "runtime_signature_v0.35.0" }

[features]
default = ["tig-native"]
native = ["tig-native"]