[workspace]
[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
ndarray = "0.15.6"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5"
num_cpus = "1.13"
libc = "0.2"

[lib]
crate-type = ["staticlib"]

[profile.release]
lto = true